5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1836_2602.log
== TEST (2019-06-20 10:21:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([2,1,2],
						 [1,2,3],
						 [0,1,2])

r = dot(inv(constanes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]==min(r)):
	print("estafilococo")
elif(r[1]==min[r]):
	print("salmonela"):
elif(r[2]==min):
	print("coli")

-- ERROR:
File "XXXX", line 22
    print("salmonela"):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:21:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([2,1,2],
						 [1,2,3],
						 [0,1,2])

r = dot(inv(constanes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]==min(r)):
	print("estafilococo")
elif(r[1]==min[r]):
	print("salmonela")
elif(r[2]==min):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:22:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([2,1,2],
						 [1,2,3],)

r = dot(inv(constanes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]==min(r)):
	print("estafilococo")
elif(r[1]==min[r]):
	print("salmonela")
elif(r[2]==min):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:25:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constanes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]==min(r)):
	print("estafilococo")
elif(r[1]==min[r]):
	print("salmonela")
elif(r[2]==min):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:25:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]==min(r)):
	print("estafilococo")
elif(r[1]==min[r]):
	print("salmonela")
elif(r[2]==min):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:26:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 10:26:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacterias = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- EXECUTION TIME:
1.04987
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo 3432.6
salmonela 13169.2
coli -8039.5
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo 5767.5
salmonela 20494.9
coli -14967.2
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo 4017.8
salmonela -3291.9
coli 1926.2
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:28:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:28:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[1,1,1]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:39:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])

r = dot(inv(constantes),bacteria)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:44:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))

#
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])

r = dot(inv(bacteria),constantes.T)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:45:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))

#
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])
c = constantes.T

r = dot(inv(bacteria),c)

#imprimir quantidades

print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:48:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])

r = dot(inv(bacteria),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:48:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])

r = dot(inv(bacteria),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:49:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#vetor inserido
constantes = array([[2,1,2],
						 [1,2,3],
						[4,0,2]])
#constantes do enunciado
r = dot(inv(constantes),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:54:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
#vetor inserido
constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado
r = dot(constantes,bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:57:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))

constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:57:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 10:58:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
bacteria = bacteria.T
constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:00:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))

constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),bacteria )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:00:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
b = bacteria.T
constantes = array([[2,1,2],[1,2,3],[4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),b )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:09:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
b = bacteria.T


constantes = array([[2,1,2] , [1,2,3] , [4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),b )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[0]== min(r)):
	print("salmonela")
elif(r[0]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:10:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
b = bacteria.T


constantes = array([[2,1,2] , [1,2,3] , [4,0,2]])
#constantes do enunciado

r = dot(inv(constantes),b )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:13:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array([2200,650,1800])
b = bacteria.T


const = array([[2,1,2] , 
						  [1,2,3] , 
						  [4,0,2]])
#constantes do enunciado

r = dot(inv(const),b )

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:14:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
b = bacteria.T


const = array([[2,1,2] , 
					[1,2,3] , 
					[4,0,2]])
#constantes do enunciado

r = dot(inv(const),b)

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:14:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))
b = bacteria.T


const = array([[2,1,2] , 
					[1,2,3] , 
					[4,0,2]])
#constantes do enunciado

r = dot(inv(const),b)

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:15:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))



const = array([[2,1,2], 
					[1,2,3], 
					[4,0,2]])
#constantes do enunciado

r = dot(inv(const),bacteria.T)

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 11:18:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))



const = array([[2,1,4], 
					[1,2,0], 
					[2,3,2]])
#constantes do enunciado

r = dot(inv(const),bacteria.T)

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 11:18:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

bacteria = array(eval(input("matriz:")))



const = array([[2,1,4], 
					[1,2,0], 
					[2,3,2]])
#constantes do enunciado

r = dot(inv(const),bacteria.T)

#imprimir quantidades

print("estafilococo:",round(r[0], 1))
print("salmonela:",round(r[1], 1))
print("coli:",round(r[2], 1))

if(r[0]== min(r)):
	print("estafilococo")
elif(r[1]== min(r)):
	print("salmonela")
elif(r[2]==min(r)):
	print("coli")

-- EXECUTION TIME:
1.01596
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:53:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:57:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array[[2,1,4],
				 [1,2,0],
				 [2,3,2]]

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:57:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:57:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- EXECUTION TIME:
1.00556
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:57:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- EXECUTION TIME:
1.26995
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:57:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:58:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- EXECUTION TIME:
1.11716
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:58:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli:",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:58:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

const = array([[2,1,4],
				 [1,2,0],
				 [2,3,2]])

r = dot(inv(const),vet.T)

print("estafilococo:",round(r[0],1))
print('salmonela:',round(r[1],1))
print("coli:",round(r[2],1))

if(r[0] == min(r)):
	print("estafilococo")
elif(r[1] == min(r)):
	print("salmonela")
elif(r[2] == min(r)):
	print("coli")
-- EXECUTION TIME:
0.992464
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
